# Jarvis

./: .gitignore  AGENTS.md  AGENT_LLM_CONFIG.md  BOOTSTRAP.md  BUSINESS_PLAN.md  COO-MANAGEMENT.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  MIGRATION.md  ORGANIZATION.md  README.md  SECURITY.md  SKILL_BRIDGE.md  SOUL.md  TOOLS.md  USER.md  VERSION.md  business_plan.md  extend_projects.js  jarvis_skill_bridge.py  polymarket_traders_v1.1.md  polymarket_traders_v1.2.md  polymarket_traders_v1.3.md  rapidapi_setup.sh  unified_inbox.json  素材库总览.md
.clawhub/: lock.json
Dubai_Lens/: README.md
mediaflow/: FEATURE_INVENTORY.md  pyproject.toml  requirements.txt  start.sh
mediaflow/docs/: ISSUES_FOUND.md
mediaflow/frontend/: electron-builder.yml  package-lock.json  package.json  vite.config.ts
mediaflow/frontend/electron/ipc/: config-handlers.ts  cookie-handlers.ts  window-handlers.ts
mediaflow/frontend/src/: App.tsx  main.tsx
mediaflow/frontend/src/__tests__/: App.test.tsx
mediaflow/frontend/src/components/: ErrorBoundary.tsx  TaskMonitor.tsx
mediaflow/frontend/src/components/downloader/: VideoDownloadOptions.tsx
mediaflow/frontend/src/components/editor/: SubtitleList.tsx  VideoPreview.tsx
mediaflow/frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  WindowControls.tsx
mediaflow/frontend/src/hooks/: useGlossary.ts  useTranslationTask.ts  useTranslator.ts
mediaflow/frontend/src/pages/: DashboardPage.tsx  DownloaderPage.tsx  TranslatorPage.tsx
mediaflow/frontend/src/stores/: downloaderStore.ts  translatorStore.ts
mediaflow/frontend/src/utils/: toast.ts
(+1355 files in other folders)
